--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -38,7 +38,7 @@ jobs:
     - name: Build distribution packages
       run: |
         pip install -r requirements.txt
-        python -m setup.py build
+        python -m setup build
 
     - name: Publish package to TestPyPI
       uses: pypa/gh-action-pypi-publish@release/v1
