--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -1,43 +1,34 @@
-# This workflow will install Python dependencies, run tests and lint with a single version of Python
-# For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-python
-
-name: voiceauthCore application
+name: voiceauthCore Upload Python Package
 
 on:
-  push:
-    branches: [ "master" ]
-  pull_request:
-    branches: [ "master" ]
+  release:
+    types: [published]
 
 permissions:
-  id-token: write # Required for requesting the JWT
+  id-token: write  # Required for OpenID authentication
   contents: write  # Required for actions/checkout
 
 jobs:
-  build:
-    name: Build distribution 📦
+  deploy:
     runs-on: ubuntu-latest
+    environment:
+      name: pypi
+      url: https://pypi.org/p/voiceauthCore
 
     steps:
     - name: Checkout repository
       uses: actions/checkout@v4
 
     - name: Set up Python
-      uses: actions/setup-python@v5
+      uses: actions/setup-python@v3
       with:
         python-version: "3.10"
-
+        
     - name: Install dependencies
       run: |
-        python -m pip install --upgrade pip wheel cx_Freeze build twine -r requirements.txt
+        python -m pip install --upgrade pip
+        pip install setuptools wheel twine
 
-    - name: Build distribution packages
+    - name: Build package
       run: |
-        pip install -r requirements.txt
-        python -m setup build
-
-    - name: Store the distribution packages
-      uses: actions/upload-artifact@v4
-      with:
-        name: python-package-distributions
-        path: dist/
+        python setup.py sdist bdist_wheel
