--- a/requirements.txt
+++ b/requirements.txt
@@ -5,3 +5,26 @@ numpy
 scipy
 transformers
 Pyinstaller
+Flask
+Werkzeug
+Flask-Limiter
+requests
+torch
+matplotlib
+scikit-learn
+voiceauthCore
+pillow
+soundfile
+style
+pip
+attrs
+wheel
+protobuf
+docutils
+tornado
+Jinja2
+setuptools
+typing_extensions
+packaging
+build
+platformdirs
