--- a/requirements.txt
+++ b/requirements.txt
@@ -1,36 +1,33 @@
-tensorflow-intel
-librosa
-pydub
-numpy
-scipy
-transformers
-Pyinstaller
+psutil
 Flask
 Werkzeug
 Flask-Limiter
+librosa
+numpy
 requests
 torch
+tensorflow
+soundfile
+params
 matplotlib
 scikit-learn
+transformers
 voiceauthCore
 pillow
-soundfile
+pydub
 style
 pip
 attrs
+DateTime
 wheel
 protobuf
 docutils
+Sphinx
 tornado
 Jinja2
 setuptools
 typing_extensions
 packaging
 build
-platformdirs
-psutil
-tensorflow-intel
-params
-DateTime
-Sphinx
 Cython
+platformdirs
