--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,15 @@
-psutil
-Werkzeug
-librosa
-numpy
-requests
-torch
-soundfile
-matplotlib
-scikit-learn
-transformers
-pillow
-pydub
-setuptools
-voiceauthCore
-DateTime
+psutil==7.0.0
+Werkzeug==3.1.3
+librosa==0.11.0
+numpy==2.2.6
+requests==2.32.4
+torch==2.7.1
+soundfile==0.13.1
+matplotlib==3.10.3
+scikit-learn==1.7.0
+transformers==4.53.0
+pillow==11.3.0
+pydub==0.25.1
+setuptools==80.4.0
+voiceauthCore==0.1.53
+DateTime==5.5
